Einführung + Material und Methoden

--- a/skizze_elektrolytischer_trog.tex
+++ b/skizze_elektrolytischer_trog.tex
@@ -56,7 +56,8 @@
 %
 % Fig TEXT object
 %
-\put{Wassergefüllter elektrolytischer Trog} [lB] at 11.239 24.479
+\put{Wassergefüllter} [lB] at 11.239 24.479
+\put{elektrolytischer Trog} [lB] at 11.249 24.010
 %
 % Fig ELLIPSE
 %
