--- a/messwerte.tex
+++ b/messwerte.tex
@@ -1,20 +1,26 @@
 \begin{tikzpicture}[xscale=1.2,yscale=1.2]
 		
-		\definecolor{cyan}{HTML}{4298AF}
+		\definecolor{cyan}{HTML}{0000FF}
+		\definecolor{pink}{HTML}{F52887}
+		\definecolor{green}{HTML}{00FF00}
+		\definecolor{purple}{HTML}{461B7E}
+		\definecolor{taupe}{HTML}{347235}
+		\definecolor{gray}{HTML}{B6B6B4}
 
-		% Achsen
-		\draw[-] (0,0) -- (11,0) node[below right] {};
-		\draw[-] (0,-9) -- (0,9) node[left] {};
-		\draw[-] (0,9) -- (11,9) node[left] {};
-		\draw[-] (11,-9) -- (11,9) node[left] {};
-		\draw[-] (0,-9) -- (11,-9) node[left] {};
+		
 		% Gitter
-		\foreach \x in {0.1,0.2,...,11} \draw[- ,line width=0.00001cm] (\x,-9) -- (\x,9);
-		\foreach \y in {-9,-8.9,...,9} \draw[- ,line width=0.00001cm] (0,\y) -- (11,\y);
-		\foreach \x in {0.5,1.0,...,11} \draw[- ,line width=0.0001cm] (\x,-9) -- (\x,9);
-		\foreach \x in {1.0,...,11} \draw[- ,line width=0.0005cm] (\x,-9) -- (\x,9);
-		\foreach \y in {-9,-8.5,...,9} \draw[- ,line width=0.0001cm] (0,\y) -- (11,\y);
-		\foreach \y in {-9,...,9} \draw[- ,line width=0.0005cm] (0,\y) -- (11,\y);
+		\foreach \x in {0.1,0.2,...,11} \draw[- ,gray ,thin] (\x,-9) -- (\x,9);
+		\foreach \y in {-9,-8.9,...,9} \draw[- ,gray ,thin] (0,\y) -- (11,\y);
+		\foreach \x in {0.5,1.0,...,11} \draw[- ,gray ,thin] (\x,-9) -- (\x,9);
+		\foreach \x in {1.0,...,11} \draw[- ,black ,thin] (\x,-9) -- (\x,9);
+		\foreach \y in {-9,-8.5,...,9} \draw[- ,gray ,thin] (0,\y) -- (11,\y);
+		\foreach \y in {-9,...,9} \draw[- ,black ,thin] (0,\y) -- (11,\y);
+		% Achsen
+		\draw[- ,thick] (0,0) -- (11,0) node[below right] {};
+		\draw[- ,thick] (0,-9) -- (0,9) node[left] {};
+		\draw[- ,thick] (0,9) -- (11,9) node[left] {};
+		\draw[- ,thick] (11,-9) -- (11,9) node[left] {};
+		\draw[- ,thick] (0,-9) -- (11,-9) node[left] {};
 		% Achsbeschriftung
 		\foreach \x in {,1,...,10} \draw (\x,0.05) -- (\x,-0.05) node [below] {\x};
 		\foreach \y in {-8,...,8} \draw (0.1,\y) -- (-0.1,\y) node [left] {\y};
@@ -25,219 +31,217 @@
 		% Messpunkte
 		
 		% 2V		
-			\node[black]  (1) at (1.00,6.00) {\textsf{+}};
-			\node[black]  (2) at (1.40,5.50) {\textsf{+}};
-			\node[black]  (3) at (1.80,5.00) {\textsf{+}};
-			\node[black]  (4) at (1.90,4.50) {\textsf{+}};
-			\node[black]  (5) at (2.00,4.00) {\textsf{+}};
-			\node[black]  (6) at (2.10,3.50) {\textsf{+}};
-			\node[black]  (7) at (2.15,3.00) {\textsf{+}};
-			\node[black]  (8) at (2.20,2.50) {\textsf{+}};
-			\node[black]  (9) at (2.20,2.00) {\textsf{+}};
-			\node[black] (11) at (2.20,1.50) {\textsf{+}};
-			\node[black] (12) at (2.20,1.00) {\textsf{+}};
-			\node[black] (13) at (2.30,0.50) {\textsf{+}};
-			\node[black] (14) at (2.30,0.00) {\textsf{+}};
+			\node[black]  (11) at (1.00,6.00) {\textsf{+}};
+			\node[black]  (21) at (1.40,5.50) {\textsf{+}};
+			\node[black]  (31) at (1.80,5.00) {\textsf{+}};
+			\node[black]  (41) at (1.90,4.50) {\textsf{+}};
+			\node[black]  (51) at (2.00,4.00) {\textsf{+}};
+			\node[black]  (61) at (2.10,3.50) {\textsf{+}};
+			\node[black]  (71) at (2.15,3.00) {\textsf{+}};
+			\node[black]  (81) at (2.20,2.50) {\textsf{+}};
+			\node[black]  (91) at (2.20,2.00) {\textsf{+}};
+			\node[black] (101) at (2.20,1.50) {\textsf{+}};
+			\node[black] (111) at (2.20,1.00) {\textsf{+}};
+			\node[black] (121) at (2.30,0.50) {\textsf{+}};
+			\node[black] (131) at (2.30,0.00) {\textsf{+}};
 			
-			\node[black] (16) at (0.80,-5.50) {\textsf{+}};
-			\node[black] (17) at (1.30,-5.00) {\textsf{+}};
-			\node[black] (18) at (1.70,-4.50) {\textsf{+}};
-			\node[black] (19) at (1.90,-4.00) {\textsf{+}};
-			\node[black] (20) at (2.05,-3.50) {\textsf{+}};
-			\node[black] (21) at (2.10,-3.00) {\textsf{+}};
-			\node[black] (22) at (2.20,-2.50) {\textsf{+}};
-			\node[black] (23) at (2.20,-2.00) {\textsf{+}};
-			\node[black] (24) at (2.20,-1.50) {\textsf{+}};
-			\node[black] (25) at (2.20,-1.00) {\textsf{+}};
-			\node[black] (26) at (2.30,-0.50) {\textsf{+}};
+			\node[black] (141) at (0.80,-5.50) {\textsf{+}};
+			\node[black] (151) at (1.30,-5.00) {\textsf{+}};
+			\node[black] (161) at (1.70,-4.50) {\textsf{+}};
+			\node[black] (171) at (1.90,-4.00) {\textsf{+}};
+			\node[black] (181) at (2.05,-3.50) {\textsf{+}};
+			\node[black] (191) at (2.10,-3.00) {\textsf{+}};
+			\node[black] (201) at (2.20,-2.50) {\textsf{+}};
+			\node[black] (211) at (2.20,-2.00) {\textsf{+}};
+			\node[black] (221) at (2.20,-1.50) {\textsf{+}};
+			\node[black] (231) at (2.20,-1.00) {\textsf{+}};
+			\node[black] (241) at (2.30,-0.50) {\textsf{+}};
+
+			\draw [black] plot [smooth] coordinates {(0,6.8) (1.7,5) (2.15,3) (2.3,0) (2.1,-3) (1.3,-5) (0,-6)};
 		
 		% 3V		
-			\node[pink]  (1) at (0.70,9.00) {\textsf{+}};
-			\node[pink]  (2) at (1.20,8.50) {\textsf{+}};
-			\node[pink]  (3) at (1.60,8.00) {\textsf{+}};
-			\node[pink]  (4) at (2.00,7.50) {\textsf{+}};
-			\node[pink]  (5) at (2.40,7.00) {\textsf{+}};
-			\node[pink]  (6) at (2.70,6.50) {\textsf{+}};
-			\node[pink]  (1) at (3.00,6.00) {\textsf{+}};
-			\node[pink]  (2) at (3.10,5.50) {\textsf{+}};
-			\node[pink]  (3) at (3.30,5.00) {\textsf{+}};
-			\node[pink]  (4) at (3.40,4.50) {\textsf{+}};
-			\node[pink]  (5) at (3.40,4.00) {\textsf{+}};
-			\node[pink]  (6) at (3.50,3.50) {\textsf{+}};
-			\node[pink]  (7) at (3.50,3.00) {\textsf{+}};
-			\node[pink]  (8) at (3.50,2.50) {\textsf{+}};
-			\node[pink]  (9) at (3.50,2.00) {\textsf{+}};
-			\node[pink] (11) at (3.60,1.50) {\textsf{+}};
-			\node[pink] (12) at (3.60,1.00) {\textsf{+}};
-			\node[pink] (13) at (3.60,0.50) {\textsf{+}};
-			\node[pink] (14) at (3.40,0.00) {\textsf{+}};
+			\node[pink]  (12) at (0.70,9.00) {\textsf{+}};
+			\node[pink]  (22) at (1.20,8.50) {\textsf{+}};
+			\node[pink]  (32) at (1.60,8.00) {\textsf{+}};
+			\node[pink]  (42) at (2.00,7.50) {\textsf{+}};
+			\node[pink]  (52) at (2.40,7.00) {\textsf{+}};
+			\node[pink]  (62) at (2.70,6.50) {\textsf{+}};
+			\node[pink]  (12) at (3.00,6.00) {\textsf{+}};
+			\node[pink]  (22) at (3.10,5.50) {\textsf{+}};
+			\node[pink]  (32) at (3.30,5.00) {\textsf{+}};
+			\node[pink]  (42) at (3.40,4.50) {\textsf{+}};
+			\node[pink]  (52) at (3.40,4.00) {\textsf{+}};
+			\node[pink]  (62) at (3.50,3.50) {\textsf{+}};
+			\node[pink]  (72) at (3.50,3.00) {\textsf{+}};
+			\node[pink]  (82) at (3.50,2.50) {\textsf{+}};
+			\node[pink]  (92) at (3.50,2.00) {\textsf{+}};
+			\node[pink] (102) at (3.60,1.50) {\textsf{+}};
+			\node[pink] (112) at (3.60,1.00) {\textsf{+}};
+			\node[pink] (122) at (3.60,0.50) {\textsf{+}};
+			\node[pink] (132) at (3.40,0.00) {\textsf{+}};
 			
 			
-			\node[pink] (20) at (1.50,-8.00) {\textsf{+}};
-			\node[pink] (16) at (1.80,-7.50) {\textsf{+}};
-			\node[pink] (17) at (1.90,-7.00) {\textsf{+}};
-			\node[pink] (18) at (2.70,-6.50) {\textsf{+}};
-			\node[pink] (19) at (2.60,-6.00) {\textsf{+}};
-			\node[pink] (16) at (2.90,-5.50) {\textsf{+}};
-			\node[pink] (17) at (3.00,-5.00) {\textsf{+}};
-			\node[pink] (18) at (3.30,-4.50) {\textsf{+}};
-			\node[pink] (19) at (3.40,-4.00) {\textsf{+}};
-			\node[pink] (20) at (3.40,-3.50) {\textsf{+}};
-			\node[pink] (21) at (3.50,-3.00) {\textsf{+}};
-			\node[pink] (22) at (3.60,-2.50) {\textsf{+}};
-			\node[pink] (23) at (3.50,-2.00) {\textsf{+}};
-			\node[pink] (24) at (3.60,-1.50) {\textsf{+}};
-			\node[pink] (25) at (3.60,-1.00) {\textsf{+}};
-			\node[pink] (26) at (3.50,-0.50) {\textsf{+}};
+			\node[pink] (142) at (1.50,-8.00) {\textsf{+}};
+			\node[pink] (152) at (1.80,-7.50) {\textsf{+}};
+			\node[pink] (162) at (1.90,-7.00) {\textsf{+}};
+			\node[pink] (172) at (2.70,-6.50) {\textsf{+}};
+			\node[pink] (182) at (2.60,-6.00) {\textsf{+}};
+			\node[pink] (192) at (2.90,-5.50) {\textsf{+}};
+			\node[pink] (202) at (3.00,-5.00) {\textsf{+}};
+			\node[pink] (212) at (3.30,-4.50) {\textsf{+}};
+			\node[pink] (222) at (3.40,-4.00) {\textsf{+}};
+			\node[pink] (232) at (3.40,-3.50) {\textsf{+}};
+			\node[pink] (242) at (3.50,-3.00) {\textsf{+}};
+			\node[pink] (252) at (3.60,-2.50) {\textsf{+}};
+			\node[pink] (262) at (3.50,-2.00) {\textsf{+}};
+			\node[pink] (272) at (3.60,-1.50) {\textsf{+}};
+			\node[pink] (282) at (3.60,-1.00) {\textsf{+}};
+			\node[pink] (292) at (3.50,-0.50) {\textsf{+}};
+
+			\draw [pink] plot [smooth] coordinates {(0.7,9) (2,7.5) (3,6) (3.25,5.5) (3.4,4.5) (3.6,0) (3.4,-4) (2.1,-7.5) (0.3,-9)};
 
 		% 4V		
-			\node[cyan]  (1) at (4.30,9.00) {\textsf{+}};
-			\node[cyan]  (2) at (4.50,8.50) {\textsf{+}};
-			\node[cyan]  (3) at (4.50,8.00) {\textsf{+}};
-			\node[cyan]  (4) at (4.60,7.50) {\textsf{+}};
-			\node[cyan]  (5) at (4.60,7.00) {\textsf{+}};
-			\node[cyan]  (6) at (4.80,6.50) {\textsf{+}};
-			\node[cyan]  (1) at (4.90,6.00) {\textsf{+}};
-			\node[cyan]  (2) at (4.90,5.50) {\textsf{+}};
-			\node[cyan]  (3) at (4.90,5.00) {\textsf{+}};
-			\node[cyan]  (4) at (4.90,4.50) {\textsf{+}};
-			\node[cyan]  (5) at (4.90,4.00) {\textsf{+}};
-			\node[cyan]  (6) at (4.90,3.50) {\textsf{+}};
-			\node[cyan]  (7) at (4.90,3.00) {\textsf{+}};
-			\node[cyan]  (8) at (4.90,2.50) {\textsf{+}};
-			\node[cyan]  (9) at (4.90,2.00) {\textsf{+}};
-			\node[cyan] (11) at (4.90,1.50) {\textsf{+}};
-			\node[cyan] (12) at (4.90,1.00) {\textsf{+}};
-			\node[cyan] (13) at (4.80,0.50) {\textsf{+}};
-			\node[cyan] (14) at (4.80,0.00) {\textsf{+}};
+			\node[cyan]  (13) at (4.30,9.00) {\textsf{+}};
+			\node[cyan]  (23) at (4.50,8.50) {\textsf{+}};
+			\node[cyan]  (33) at (4.50,8.00) {\textsf{+}};
+			\node[cyan]  (43) at (4.60,7.50) {\textsf{+}};
+			\node[cyan]  (53) at (4.60,7.00) {\textsf{+}};
+			\node[cyan]  (63) at (4.80,6.50) {\textsf{+}};
+			\node[cyan]  (73) at (4.90,6.00) {\textsf{+}};
+			\node[cyan]  (83) at (4.90,5.50) {\textsf{+}};
+			\node[cyan]  (93) at (4.90,5.00) {\textsf{+}};
+			\node[cyan] (103) at (4.90,4.50) {\textsf{+}};
+			\node[cyan] (113) at (4.90,4.00) {\textsf{+}};
+			\node[cyan] (123) at (4.90,3.50) {\textsf{+}};
+			\node[cyan] (133) at (4.90,3.00) {\textsf{+}};
+			\node[cyan] (143) at (4.90,2.50) {\textsf{+}};
+			\node[cyan] (153) at (4.90,2.00) {\textsf{+}};
+			\node[cyan] (163) at (4.90,1.50) {\textsf{+}};
+			\node[cyan] (173) at (4.90,1.00) {\textsf{+}};
+			\node[cyan] (183) at (4.80,0.50) {\textsf{+}};
+			\node[cyan] (193) at (4.80,0.00) {\textsf{+}};
 			
-			\node[cyan] (20) at (4.20,-9.00) {\textsf{+}};
-			\node[cyan] (16) at (4.30,-8.50) {\textsf{+}};
-			\node[cyan] (17) at (4.30,-8.00) {\textsf{+}};
-			\node[cyan] (18) at (4.50,-7.50) {\textsf{+}};
-			\node[cyan] (19) at (4.55,-7.00) {\textsf{+}};
-			\node[cyan] (16) at (4.60,-6.50) {\textsf{+}};
-			\node[cyan] (17) at (4.65,-6.00) {\textsf{+}};
-			\node[cyan] (16) at (4.70,-5.50) {\textsf{+}};
-			\node[cyan] (17) at (4.80,-5.00) {\textsf{+}};
-			\node[cyan] (18) at (4.80,-4.50) {\textsf{+}};
-			\node[cyan] (19) at (4.80,-4.00) {\textsf{+}};
-			\node[cyan] (20) at (4.85,-3.50) {\textsf{+}};
-			\node[cyan] (21) at (4.90,-3.00) {\textsf{+}};
-			\node[cyan] (22) at (4.90,-2.50) {\textsf{+}};
-			\node[cyan] (23) at (5.00,-2.00) {\textsf{+}};
-			\node[cyan] (24) at (5.00,-1.50) {\textsf{+}};
-			\node[cyan] (25) at (5.00,-1.00) {\textsf{+}};
-			\node[cyan] (26) at (5.00,-0.50) {\textsf{+}};
+			\node[cyan] (203) at (4.20,-9.00) {\textsf{+}};
+			\node[cyan] (213) at (4.30,-8.50) {\textsf{+}};
+			\node[cyan] (223) at (4.30,-8.00) {\textsf{+}};
+			\node[cyan] (233) at (4.50,-7.50) {\textsf{+}};
+			\node[cyan] (243) at (4.55,-7.00) {\textsf{+}};
+			\node[cyan] (253) at (4.60,-6.50) {\textsf{+}};
+			\node[cyan] (263) at (4.65,-6.00) {\textsf{+}};
+			\node[cyan] (273) at (4.70,-5.50) {\textsf{+}};
+			\node[cyan] (283) at (4.80,-5.00) {\textsf{+}};
+			\node[cyan] (293) at (4.80,-4.50) {\textsf{+}};
+			\node[cyan] (303) at (4.80,-4.00) {\textsf{+}};
+			\node[cyan] (313) at (4.85,-3.50) {\textsf{+}};
+			\node[cyan] (323) at (4.90,-3.00) {\textsf{+}};
+			\node[cyan] (333) at (4.90,-2.50) {\textsf{+}};
+			\node[cyan] (343) at (5.00,-2.00) {\textsf{+}};
+			\node[cyan] (353) at (5.00,-1.50) {\textsf{+}};
+			\node[cyan] (363) at (5.00,-1.00) {\textsf{+}};
+			\node[cyan] (373) at (5.00,-0.50) {\textsf{+}};
 
-		% 5V		
-			\node[green]  (1) at (1.80,6.00) {\textsf{+}};
-			\node[green]  (2) at (1.40,5.50) {\textsf{+}};
-			\node[green]  (3) at (1.80,5.00) {\textsf{+}};
-			\node[green]  (4) at (1.90,4.50) {\textsf{+}};
-			\node[green]  (5) at (2.00,4.00) {\textsf{+}};
-			\node[green]  (6) at (2.10,3.50) {\textsf{+}};
-			\node[green]  (7) at (2.15,3.00) {\textsf{+}};
-			\node[green]  (8) at (2.20,2.50) {\textsf{+}};
-			\node[green]  (9) at (2.20,2.00) {\textsf{+}};
-			\node[green] (11) at (2.20,1.50) {\textsf{+}};
-			\node[green] (12) at (2.20,1.00) {\textsf{+}};
-			\node[green] (13) at (2.30,0.50) {\textsf{+}};
-			\node[green] (14) at (2.30,0.00) {\textsf{+}};
+			\draw [cyan] plot [smooth] coordinates {(4.3,9) (4.7,8) (4.8,7.5) (5,6) (5,0) (4.8,-5) (4.3,-8) (4.1,-9)};
+
+		% 5V	
+			\node[green]  (14) at (6.90,9.00) {\textsf{+}};
+			\node[green]  (24) at (6.80,8.50) {\textsf{+}};
+			\node[green]  (34) at (6.60,8.00) {\textsf{+}};
+			\node[green]  (44) at (6.50,7.50) {\textsf{+}};
+			\node[green]  (54) at (6.50,7.00) {\textsf{+}};
+			\node[green]  (64) at (6.40,6.50) {\textsf{+}};	
+			\node[green]  (74) at (6.40,6.00) {\textsf{+}};
+			\node[green]  (84) at (6.40,5.50) {\textsf{+}};
+			\node[green]  (94) at (6.40,5.00) {\textsf{+}};
+			\node[green] (104) at (6.30,4.50) {\textsf{+}};
+			\node[green] (114) at (6.20,4.00) {\textsf{+}};
+			\node[green] (124) at (6.20,3.50) {\textsf{+}};
+			\node[green] (134) at (6.20,3.00) {\textsf{+}};
+			\node[green] (144) at (6.10,2.50) {\textsf{+}};
+			\node[green] (154) at (6.10,2.00) {\textsf{+}};
+			\node[green] (164) at (6.10,1.50) {\textsf{+}};
+			\node[green] (174) at (6.10,1.00) {\textsf{+}};
+			\node[green] (184) at (6.10,0.50) {\textsf{+}};
+			\node[green] (194) at (6.10,0.00) {\textsf{+}};
 			
-			\node[green] (16) at (0.80,-5.50) {\textsf{+}};
-			\node[green] (17) at (1.30,-5.00) {\textsf{+}};
-			\node[green] (18) at (1.70,-4.50) {\textsf{+}};
-			\node[green] (19) at (1.90,-4.00) {\textsf{+}};
-			\node[green] (20) at (2.05,-3.50) {\textsf{+}};
-			\node[green] (21) at (2.10,-3.00) {\textsf{+}};
-			\node[green] (22) at (2.20,-2.50) {\textsf{+}};
-			\node[green] (23) at (2.20,-2.00) {\textsf{+}};
-			\node[green] (24) at (2.20,-1.50) {\textsf{+}};
-			\node[green] (25) at (2.20,-1.00) {\textsf{+}};
-			\node[green] (26) at (2.30,-0.50) {\textsf{+}};
+			\node[green] (204) at (6.20,-0.50) {\textsf{+}};
+			\node[green] (214) at (6.30,-1.00) {\textsf{+}};
+			\node[green] (224) at (6.30,-1.50) {\textsf{+}};
+			\node[green] (234) at (6.30,-2.00) {\textsf{+}};
+			\node[green] (244) at (6.30,-2.50) {\textsf{+}};
+			\node[green] (254) at (6.30,-3.00) {\textsf{+}};
+			\node[green] (264) at (6.40,-3.50) {\textsf{+}};
+			\node[green] (274) at (6.30,-4.00) {\textsf{+}};
+			\node[green] (284) at (6.50,-4.50) {\textsf{+}};
+			\node[green] (294) at (6.50,-5.00) {\textsf{+}};
+			\node[green] (304) at (6.50,-5.50) {\textsf{+}};
+			\node[green] (314) at (6.60,-6.00) {\textsf{+}};
+			\node[green] (324) at (6.60,-6.50) {\textsf{+}};
+			\node[green] (334) at (6.60,-7.00) {\textsf{+}};
+			\node[green] (344) at (6.70,-7.50) {\textsf{+}};
+			\node[green] (354) at (6.90,-8.00) {\textsf{+}};
+			\node[green] (364) at (7.00,-8.50) {\textsf{+}};
+			\node[green] (374) at (7.10,-9.00) {\textsf{+}};
+		
+			\draw [green] plot [smooth] coordinates {(6.9,9) (6.5,8) (6.2,0) (6.6,-7) (6.75,-8) (7.1,-9)};
 
 		% 6V		
-			\node[red]  (1) at (1.20,6.00) {\textsf{+}};
-			\node[red]  (2) at (1.40,5.50) {\textsf{+}};
-			\node[red]  (3) at (1.80,5.00) {\textsf{+}};
-			\node[red]  (4) at (1.90,4.50) {\textsf{+}};
-			\node[red]  (5) at (2.00,4.00) {\textsf{+}};
-			\node[red]  (6) at (2.10,3.50) {\textsf{+}};
-			\node[red]  (7) at (2.15,3.00) {\textsf{+}};
-			\node[red]  (8) at (2.20,2.50) {\textsf{+}};
-			\node[red]  (9) at (2.20,2.00) {\textsf{+}};
-			\node[red] (11) at (2.20,1.50) {\textsf{+}};
-			\node[red] (12) at (2.20,1.00) {\textsf{+}};
-			\node[red] (13) at (2.30,0.50) {\textsf{+}};
-			\node[red] (14) at (2.30,0.00) {\textsf{+}};
+			\node (05) at (11,8.55) {};
+			\node[red]  (15) at (10.6,8.50) {\textsf{+}};
+			\node[red]  (25) at (9.60,8.00) {\textsf{+}};
+			\node[red]  (35) at (9.40,7.50) {\textsf{+}};
+			\node[red]  (45) at (8.80,7.00) {\textsf{+}};
+			\node[red]  (55) at (8.55,6.50) {\textsf{+}};			
+			\node[red]  (65) at (8.10,6.00) {\textsf{+}};
+			\node[red]  (75) at (8.00,5.50) {\textsf{+}};
+			\node[red]  (85) at (7.80,5.00) {\textsf{+}};
+			\node[red]  (95) at (7.70,4.50) {\textsf{+}};
+			\node[red] (105) at (7.70,4.00) {\textsf{+}};
+			\node[red] (115) at (7.60,3.50) {\textsf{+}};
+			\node[red] (125) at (7.50,3.00) {\textsf{+}};
+			\node[red] (135) at (7.40,2.50) {\textsf{+}};
+			\node[red] (145) at (7.40,2.00) {\textsf{+}};
+			\node[red] (155) at (7.40,1.50) {\textsf{+}};
+			\node[red] (165) at (7.40,1.00) {\textsf{+}};
+			\node[red] (175) at (7.30,0.50) {\textsf{+}};
+			\node[red] (185) at (7.40,0.00) {\textsf{+}};
 			
-			\node[red] (16) at (0.80,-5.50) {\textsf{+}};
-			\node[red] (17) at (1.30,-5.00) {\textsf{+}};
-			\node[red] (18) at (1.70,-4.50) {\textsf{+}};
-			\node[red] (19) at (1.90,-4.00) {\textsf{+}};
-			\node[red] (20) at (2.05,-3.50) {\textsf{+}};
-			\node[red] (21) at (2.10,-3.00) {\textsf{+}};
-			\node[red] (22) at (2.20,-2.50) {\textsf{+}};
-			\node[red] (23) at (2.20,-2.00) {\textsf{+}};
-			\node[red] (24) at (2.20,-1.50) {\textsf{+}};
-			\node[red] (25) at (2.20,-1.00) {\textsf{+}};
-			\node[red] (26) at (2.30,-0.50) {\textsf{+}};
+			\node[red] (195) at (11.0,-7.50) {\textsf{+}};
+			\node[red] (205) at (8.60,-7.00) {\textsf{+}};
+			\node[red] (215) at (8.40,-6.50) {\textsf{+}};
+			\node[red] (225) at (8.60,-6.00) {\textsf{+}};
+			\node[red] (235) at (8.50,-5.50) {\textsf{+}};
+			\node[red] (245) at (8.00,-5.00) {\textsf{+}};
+			\node[red] (255) at (7.90,-4.50) {\textsf{+}};
+			\node[red] (265) at (7.70,-4.00) {\textsf{+}};
+			\node[red] (275) at (7.60,-3.50) {\textsf{+}};
+			\node[red] (285) at (7.60,-3.00) {\textsf{+}};
+			\node[red] (295) at (7.60,-2.50) {\textsf{+}};
+			\node[red] (305) at (7.50,-2.00) {\textsf{+}};
+			\node[red] (315) at (7.50,-1.50) {\textsf{+}};
+			\node[red] (325) at (7.50,-1.00) {\textsf{+}};
+			\node[red] (335) at (7.40,-0.50) {\textsf{+}};
 
-		% 7V		
-			\node[purple]  (1) at (2.00,6.00) {\textsf{+}};
-			\node[purple]  (2) at (1.40,5.50) {\textsf{+}};
-			\node[purple]  (3) at (1.80,5.00) {\textsf{+}};
-			\node[purple]  (4) at (1.90,4.50) {\textsf{+}};
-			\node[purple]  (5) at (2.00,4.00) {\textsf{+}};
-			\node[purple]  (6) at (2.10,3.50) {\textsf{+}};
-			\node[purple]  (7) at (2.15,3.00) {\textsf{+}};
-			\node[purple]  (8) at (2.20,2.50) {\textsf{+}};
-			\node[purple]  (9) at (2.20,2.00) {\textsf{+}};
-			\node[purple] (11) at (2.20,1.50) {\textsf{+}};
-			\node[purple] (12) at (2.20,1.00) {\textsf{+}};
-			\node[purple] (13) at (2.30,0.50) {\textsf{+}};
-			\node[purple] (14) at (2.30,0.00) {\textsf{+}};
+			\draw [red] plot [smooth] coordinates {(11,8.55) (8.8,7) (7.6,4) (7.5,0) (7.6,-4) (9,-6.5) (11,-7.5)};
 			
-			\node[purple] (16) at (0.80,-5.50) {\textsf{+}};
-			\node[purple] (17) at (1.30,-5.00) {\textsf{+}};
-			\node[purple] (18) at (1.70,-4.50) {\textsf{+}};
-			\node[purple] (19) at (1.90,-4.00) {\textsf{+}};
-			\node[purple] (20) at (2.05,-3.50) {\textsf{+}};
-			\node[purple] (21) at (2.10,-3.00) {\textsf{+}};
-			\node[purple] (22) at (2.20,-2.50) {\textsf{+}};
-			\node[purple] (23) at (2.20,-2.00) {\textsf{+}};
-			\node[purple] (24) at (2.20,-1.50) {\textsf{+}};
-			\node[purple] (25) at (2.20,-1.00) {\textsf{+}};
-			\node[purple] (26) at (2.30,-0.50) {\textsf{+}};
+		% 7V		
+			\node[purple] (25) at (8.60,0.00) {\textsf{+}};
+			\node[purple] (26) at (10.0,-5.5) {\textsf{+}};
+
+			\draw [purple] plot [smooth] coordinates {(11,6.3) (9.3,5) (8.7,3) (8.5,0) (8.6,-3) (9,-4.5) (10,-5.5) (11,-6)};
 
 		% 8V		
-			\node[orange]  (1) at (1.20,6.00) {\textsf{+}};
-			\node[orange]  (2) at (1.40,5.50) {\textsf{+}};
-			\node[orange]  (3) at (1.80,5.00) {\textsf{+}};
-			\node[orange]  (4) at (1.90,4.50) {\textsf{+}};
-			\node[orange]  (5) at (2.00,4.00) {\textsf{+}};
-			\node[orange]  (6) at (2.10,3.50) {\textsf{+}};
-			\node[orange]  (7) at (2.15,3.00) {\textsf{+}};
-			\node[orange]  (8) at (2.20,2.50) {\textsf{+}};
-			\node[orange]  (9) at (2.20,2.00) {\textsf{+}};
-			\node[orange] (11) at (2.20,1.50) {\textsf{+}};
-			\node[orange] (12) at (2.20,1.00) {\textsf{+}};
-			\node[orange] (13) at (2.30,0.50) {\textsf{+}};
-			\node[orange] (14) at (2.30,0.00) {\textsf{+}};
-			
-			\node[orange] (16) at (0.80,-5.50) {\textsf{+}};
-			\node[orange] (17) at (1.30,-5.00) {\textsf{+}};
-			\node[orange] (18) at (1.70,-4.50) {\textsf{+}};
-			\node[orange] (19) at (1.90,-4.00) {\textsf{+}};
-			\node[orange] (20) at (2.05,-3.50) {\textsf{+}};
-			\node[orange] (21) at (2.10,-3.00) {\textsf{+}};
-			\node[orange] (22) at (2.20,-2.50) {\textsf{+}};
-			\node[orange] (23) at (2.20,-2.00) {\textsf{+}};
-			\node[orange] (24) at (2.20,-1.50) {\textsf{+}};
-			\node[orange] (25) at (2.20,-1.00) {\textsf{+}};
-			\node[orange] (26) at (2.30,-0.50) {\textsf{+}};
+			\node[orange] (25) at (10.0,0.00) {\textsf{+}};
+			\node[orange] (26) at (10.5,-3.5) {\textsf{+}};
 
+			\draw [orange] plot [smooth] coordinates {(11,4) (10.2,3) (10,0) (10.3,-3) (10.5,-3.5) (11,-4)};
+
+		% Feldlinien
+			\draw[- ,thick ,taupe] (0,-0.75) -- (11,-0.75);
+			\draw[- ,thick ,taupe] (0,1.05) -- (11,1.05);
+			\draw[- ,thick ,taupe] (0,1.35) -- (11,1.35);
+			\draw[- ,thick ,taupe] (0,-2.85) -- (11,-2.85);
+			\draw[- ,thick ,taupe] (0,-2.05) -- (11,-2.05);
+			\draw[- ,thick ,taupe] (0,2.05) -- (11,2.05);
 
 	\end{tikzpicture}
 	\caption{Messwerte}
