--- a/messwerte1.tex
+++ b/messwerte1.tex
@@ -1,5 +1,6 @@
 \begin{tikzpicture}[xscale=1.2,yscale=1.2]
 		
+%testüäö
 		\definecolor{cyan}{HTML}{0000FF}
 		\definecolor{pink}{HTML}{F52887}
 		\definecolor{green}{HTML}{00FF00}
