--- a/messwerte2.tex
+++ b/messwerte2.tex
@@ -1,6 +1,5 @@
 \begin{tikzpicture}[xscale=1.15,yscale=1.15]
 		
-%testüäö
 		\definecolor{cyan}{HTML}{0000FF}
 		\definecolor{pink}{HTML}{F52887}
 		\definecolor{green}{HTML}{00FF00}
@@ -11,7 +10,7 @@
 		
 		% Gitter
 		\foreach \x in {0.1,0.2,...,11} \draw[- ,grey ,thin] (\x,-8.8) -- (\x,9);
-		\foreach \y in {-8.8,-8.8,...,9} \draw[- ,grey ,thin] (0,\y) -- (11,\y);
+		\foreach \y in {-8.8,...,9} \draw[- ,grey ,thin] (0,\y) -- (11,\y);
 		\foreach \x in {0.5,1.0,...,11} \draw[- ,gray ,thin] (\x,-8.8) -- (\x,9);
 		\foreach \x in {1.0,...,11} \draw[- ,black ,thin] (\x,-8.8) -- (\x,9);
 		\foreach \y in {-8.5,-8,...,9} \draw[- ,gray ,thin] (0,\y) -- (11,\y);
