--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -208,7 +208,7 @@
 		\[E_{P_3} = \frac{\SI{10}{\volt}}{\SI{0.11}{\metre}} = \SI{90,9091}{\volt \per \meter}\]
 
 	\subsection{Beobachtung zum Metallring}
-	In dem, in Messreihe 2 hinzugelegten, Metallring befand sich eine Äquipotentialfläche von \SI{4,3}{\volt}.
+	In dem, in Messreihe 2 hinzugefügten, Metallring befand sich eine Äquipotentialfläche von \SI{4,3}{\volt}.
 
 \end{document}
 
