--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -170,7 +170,7 @@
 	In Abbildung \ref{fig:Diagramm1} sind die Messpunkte und die Äquipotentiallinien für \SI{2}{\volt} (schwarz), \SI{3}{\volt} (pink),
 	\SI{4}{\volt} (blau), \SI{5}{\volt} (hellgrün), \SI{6}{\volt} (rot), \SI{7}{\volt} (lila) und \SI{8}{\volt} (orange) eingezeichnet.
 	Dazu wurden außerdem die magnetischen Feldlinien (dunkelgrün) eingezeichnet, die zwischen den beiden Kondensatorplatten,
-	beim Anlegen einer Spannung, entstehen.\\
+	beim Anlegen einer Spannung, entstehen, und jeweils noch drei Punkte zur Berechnung der elektrischen Feldstärke $E$.\\
 	In Abbildung \ref{fig:Diagramm2} sind ebenfalls die Messpunkte, Äquipotentiallinien und Feldlinien eingezeichnet, die Farben entsprechen
 	den aus Abbildung \ref{fig:Diagramm1}. Hinzu kommt in Abbildung \ref{fig:Diagramm2} der Metallring, der im Inneren des Rings
 	eine Äquipotentialfläche besaß, deren Spannung \SI{4.3}{\volt} betrug. Der Metallring selbst ist ebenfalls eine Äquipotentiallinie,
@@ -193,6 +193,7 @@
 	\subsection{Betrag der elektrischen Feldstärke $E$}
 	Die benötigte Formel zu Berechnung der elektrischen Feldstärke $E$ lautet:
 	\[E=\frac{\text{Potentialdifferenz }\Delta\varphi}{\text{Abstand der Potentiallinien }\Delta s}\] 
+	Für den Abstand der Potentiallinie  wurde die Länge Feldlinien gemessen. 
 	
 	\subsubsection{Messreihe 1}
 	Punkt $P_1 \left(\num{1.8} \mid 2\right)$,  Punkt $P_2 \left(\num{5,5} \mid \num{4,4}\right)$, Punkt $P_3 \left(\num{9.6} \mid 8\right)$:
@@ -208,7 +209,9 @@
 		\[E_{P_3} = \frac{\SI{10}{\volt}}{\SI{0.11}{\metre}} = \SI{90,9091}{\volt \per \meter}\]
 
 	\subsection{Beobachtung zum Metallring}
-	In dem, in Messreihe 2 hinzugefügten, Metallring befand sich eine Äquipotentialfläche von \SI{4,3}{\volt}.
+	In dem, in Messreihe 2 hinzugefügten, Metallring befand sich eine Äquipotentialfläche von \SI{4,3}{\volt}. Diese Äquipotentialfläche
+	entsteht, da der Ring als Leiter keine Potentialdifferenz besitzt. Dadurch ist die Ringinnenfläche komplett von den beiden Elektroden abgeschirmt,
+	und es wirkt nur der Ring als Äquipotentiallinie auf das Ringinnere. Dadurch entsteht keine Potentialdifferenz im Raum.
 
 \end{document}
 
