--- a/messwerte1.tex
+++ b/messwerte1.tex
@@ -244,6 +244,11 @@
 			\draw[- ,thick ,taupe] (0,-2.05) -- (11,-2.05);
 			\draw[- ,thick ,taupe] (0,2.05) -- (11,2.05);
 
+		% Punkte für elektr. Feldstärke E
+			\node (1) at (1.8,2) {\textsf{x}} node[below right] {$P_1$};
+			\node (2) at (5.5,4.4) {\textsf{x}} node[below right] {$P_1$};
+			\node (3) at (9.6,8) {\textsf{x}} node[below right] {$P_2$};
+
 	\end{tikzpicture}
 	\caption{Messwerte}
 	\label{fig:Diagramm1}
