--- a/messwerte2.tex
+++ b/messwerte2.tex
@@ -161,9 +161,9 @@
 			\draw[- ,thick ,taupe] (0,2.05) -- (11,2.05);
 
 		% Punkte für elektr. Feldstärke E
-			\node (1) at (1.3,5.5) {\textsf{x}} node[below right] {$P_1$};
-			\node (2) at (6.2,1,35) {\textsf{x}} node[below right] {$P_1$};
-			\node (3) at (7.38,-2,05) {\textsf{x}} node[below right] {$P_2$};
+			\node (1) at (1.3,5.5) {\textsf{x}};
+			\node (2) at (6.2,1.35) {\textsf{x}};
+			\node (3) at (7.38,-2.05) {\textsf{x}};
 
 	\end{tikzpicture}
 	\caption{Messwerte}
