--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -113,7 +113,7 @@
 \section{Einführung}
 	Bei dem Versuch "`Elektrolytischer Trog"' ergibt sich der Verlauf der Feldlinien zwischen zwei Elektroden. Auf diesen Verlauf
 	kommt man, indem man zwischen einem Plattenkondensator, der sich in einem Elektrolyt befindet, Äquipotentiallinien(-flächen)
-	sucht und sich diese Verläufe notiert. Durch diese Äquipotentiallinien muss man jeweils eine orthogonale einzeichnen, und
+	sucht und sich diese Verläufe notiert. Durch diese Äquipotentiallinien muss man jeweils eine Orthogonale einzeichnen, und
 	man erhält den Verlauf von Feldlinien in einem Plattenkondensator.\\
 	An den Elektroden wurde eine Wechselspannung  angelegt, da sich so keine Debye-Schicht (Elektrochemische 
 	Raumladungsdoppelschicht), wie bei einer Gleichspannung, ausbreiten konnte. Bei dieser Raumladungsdoppelschicht 
@@ -144,7 +144,7 @@
 	sie in das, als Elektrolyt verwendete, Leitungswasser hineinragen. An diese  Elektroden wurde eine Wechselspannung angelegt.
 	Außerdem wurde noch ein Multimeter installiert, sodass man mit einer Messspitze die Potentialdifferenz zwischen einer Elektrode
 	und einer beliebigen Stelle im Elektrolyt messen konnte.\\
-	In der zweiten Messreihe wurde noch ein Metallring in den elektrolytischen Trog gelegt, sodass das Magnetfeld durch ihn gestört
+	In der zweiten Messreihe wurde noch ein Metallring in den elektrolytischen Trog gelegt, sodass das elektrische Feld durch ihn gestört
 	wird.
 	
 
@@ -209,9 +209,9 @@
 		\[E_{P_3} = \frac{\SI{10}{\volt}}{\SI{0.11}{\metre}} = \SI{90,9091}{\volt \per \meter}\]
 
 	\subsection{Beobachtung zum Metallring}
-	In dem, in Messreihe 2 hinzugefügten, Metallring befand sich eine Äquipotentialfläche von \SI{4,3}{\volt}. Diese Äquipotentialfläche
+	Der in Messreihe 2 hinzugefügte Metallring besaß ein einheitliches Potential von  \SI{4,3}{\volt}. Diese einheitliches Potential
 	entsteht, da der Ring als Leiter keine Potentialdifferenz besitzt. Dadurch ist die Ringinnenfläche komplett von den beiden Elektroden abgeschirmt,
-	und es wirkt nur der Ring als Äquipotentiallinie auf das Ringinnere. Dadurch entsteht keine Potentialdifferenz im Raum.
+	und es wirkt nur der Ring als Äquipotentiallinie auf das Ringinnere. Dadurch entsteht keine Potentialdifferenz im Ringinneren.
 
 \end{document}
 
